--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/SamVerschueren/gulp-cordova-www/issues"
   },
-  "homepage": "https://github.com/SamVerschueren/gulp-cordova-www"
+  "homepage": "https://github.com/SamVerschueren/gulp-cordova-www",
+  "dependencies": {
+    "gulp-util": "^3.0.5",
+    "through2": "^2.0.0"
+  }
 }
